--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
       }
     </style>
     <script src="https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v5.3.0/build/ol.js"></script>
-    <title>OpenLayers example</title>
+    <title>Potat0 Maps</title>
   </head>
   <body>
-    <h2>My Map</h2>
+    <h2>Navigieren: </h2>
     <div id="map" class="map"></div>
     <script type="text/javascript">
       var map = new ol.Map({
