--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
           })
         ],
         view: new ol.View({
-          center: ol.proj.fromLonLat([37.41, 8.82]),
-          zoom: 4
+          center: ol.proj.fromLonLat([51.4389827, 14.2454572]),
+          zoom: 30
         })
       });
     </script>
