--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           })
         ],
         view: new ol.View({
-          center: ol.proj.fromLonLat([51.4389827, 14.2454572]),
+          center: ol.proj.fromLonLat([14.2454572, 51,4389827]),
           zoom: 30
         })
       });
