--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           })
         ],
         view: new ol.View({
-          center: ol.proj.fromLonLat([14.2454572, 51,4389827]),
+          center: ol.proj.fromLonLat([14.2448831, 51.4390846]),
           zoom: 19
         })
       });
