--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" href="https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v5.3.0/css/ol.css" type="text/css">
     <style>
       .map {
-        height: 80%;
+        height: 60%;
         width: 100%;
       }
     </style>
@@ -13,6 +13,7 @@
   </head>
   <body>
     <h2>Navigieren: </h2>
+    <input type="text" name="Coordinates" id="coords">
     <div id="map" class="map"></div>
     <script type="text/javascript">
       var map = new ol.Map({
