--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <h2>Navigieren: </h2>
-    <form action="formmailer.php" method="post" id="myForm">
+    <form method="post" id="myForm">
       <label>Longtiude
         <input type="text" name="Coordinates" id="coords1">
       </label>
