--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         let lat1 = document.getElementById('coords2');
           console.log("Long: " + long + " Lat: " + lat);
         window.location.href = "https://unrealvalentin.github.io/potato-maps/?"+long1+","+lat1;
-        return true;
+        return false;
       }
     </script>
   </body>
