--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
     <script type="text/javascript">
       let args = window.location.search;
       console.log(args);
+        let long = 14.2454676;
+        let lat = 51.4390602;
       args.split('?');
       if (args[1] != null) {
       let fullcords = args[1];
