--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
       if (args[1] != null) {
       let fullcords = args[1];
       fullcords.split(',');
-        let long = fullcords[0];
-        let lat = fullcords[1];
+        long = fullcords[0];
+        lat = fullcords[1];
       } else {
         let long = 14.2454676;
         let lat = 51.4390602;
