--- a/index.html
+++ b/index.html
@@ -29,14 +29,12 @@
         let long = 14.2454676;
         let lat = 51.4390602;
       args.split('?');
-      if (args[1] != null) {
+
       let fullcords = args[1];
       fullcords.split(',');
+      if (fullcords != null) {
         long = fullcords[0];
         lat = fullcords[1];
-      } else {
-        let long = 14.2454676;
-        let lat = 51.4390602;
       }
       var map = new ol.Map({
         target: 'map',
