--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           })
         ],
         view: new ol.View({
-          center: ol.proj.fromLonLat([long, lat]),
+          center: ol.proj.fromLonLat([long1, lat1]),
           zoom: 19
         })
       });
