Weitere Buttons/Icons Anchor neu gesetzt

--- a/index.html
+++ b/index.html
@@ -35,11 +35,14 @@
 
       var poi0 = { name: "Johanneum", id: "hoyjohanneum", coordinates: [14.24694, 51.43609] };
       var poi1 = { name: "ZCOM", id: "hoyzcom", coordinates: [14.25608, 51.43744] };
-      var locations = [poi0, poi1];
+      var poi2 = { name: "Lausitzer Platz", id: "hoylausplatz", coordinates: [14.26245, 51.43843] };
+      var poi3 = { name: "Léon-Foucault Gymnasium", id: "hoyleonfoucault", coordinates: [14.25319, 51.43650] };
+      var poi4 = { name: "Waldfriedhof", id: "hoywaldfriedhof", coordinates: [14.2856, 51.44086] };
+      var locations = [poi0, poi1, poi2, poi3, poi4];
 
       var iconStyle = new ol.style.Style({
         image: new ol.style.Icon({
-          anchor: [0.5, 46],
+          anchor: [0.5, 10],
           anchorXUnits: 'fraction',
           anchorYUnits: 'pixels',
           src: 'icon.png'
