--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       var iconFeatureList = [];
       for (var locIndex in locations) {
         var locObj = locations[locIndex];
-        var buttonelement = document.createElement('button');
+        var buttonelement = document.createElement('');
         buttonelement.innerHTML = "<button id=\""+locObj.id+"\">"+locObj.name+"</button>";
         buttonsDiv.appendChild(buttonelement);
         
