--- a/index.html
+++ b/index.html
@@ -25,6 +25,16 @@
                 color: white;
                 padding: 0 0.5em 0.5em 0.5em;
     }
+
+    .custom-zoom{
+      top: .5em;
+      left: .5em;
+    }
+    .custom-zoom button{
+      background-color: rgba(40, 40, 40, .7);
+      border-radius: 50%;
+    }
+
   </style>
   <script src="https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v5.3.0/build/ol.js"></script>
   <title>Potat0 Maps</title>
@@ -130,6 +140,11 @@
             source: new ol.source.OSM()
           }), vectorLayer
 
+        ],
+        controls: [
+        new ol.control.Zoom({
+        className: 'custom-zoom'
+      })
         ],
         view: view1
       });
