--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       var poi1 = { name: "ZCOM", id: "hoyzcom", coordinates: [14.25608, 51.43744], description: "Tolle Museum, welches wirklich sehr sehr toll ist." };
       var poi2 = { name: "Lausitzer Platz", id: "hoylausplatz", coordinates: [14.26245, 51.43843], description:  "Hier kann man Sachen kaufen" };
       var poi3 = { name: "Foucault", id: "hoyfoucault", coordinates: [14.25319, 51.43650], description:  "Das ist auch eine Schule" };
-      var poi4 = { name: "Waldfriedhof", id: "hoywaldfriedhof", coordinates: [14.2856, 51.44086], description:  "Das ist der Friedhof, die Hoyerswerda am nächsten ist" };
+      var poi4 = { name: "Waldfriedhof", id: "hoywaldfriedhof", coordinates: [14.2856, 51.44086], description:  "Das ist der Friedhof, der Hoyerswerda am nächsten ist" };
       var poi5 = { name: "Kulturfabrik", id: "kufa", coordinates: [14.245475, 51.438972], description: "Das Soziokulturelle Zentrum für Hoyerswerda und die Region. Braugasse 1, 02977 Hoyerswerda"};
       var locations = [poi0, poi1, poi2, poi3, poi4, poi5];
 
