--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     type="text/css" />
     <link rel="stylesheet" href="bulma.css" type="text/css" />
     <link rel="stylesheet" href="own.css" type="text/css" />
+    <link rel="shortcut icon" href="favicon.png" />
   <style>
     html, body, #map {
       margin: 0;
