--- a/index.html
+++ b/index.html
@@ -124,13 +124,17 @@
       });
 
       var vectorLayer = new ol.layer.Vector({
-        source: vectorSource
+        source: vectorSource,
+        minResolution: 0,
+        maxResolution: 30
       });
 
       /* Für die Karte benötigtes Zeug */
       var properties = {
         center: ol.proj.fromLonLat([long, lat]),
-        zoom: 19
+        zoom: 18,
+        minZoom: 2,
+        maxZoom: 19
       }
       var view1 = new ol.View(properties)
 
