--- a/index.html
+++ b/index.html
@@ -87,7 +87,8 @@
         return function() {
           var point = ol.proj.fromLonLat(locObj.coordinates);
           var size = map.getSize();
-          view1.centerOn(point, size, [570, 500]);
+          view1.centerOn(point, size, [700, 300]);
+          view1.zoom(5)
           console.log(locObj.id);
           descriptionDiv.innerHTML = locObj.description;
         }
