--- a/index.html
+++ b/index.html
@@ -57,11 +57,7 @@
   <script type="text/javascript">
     window.onload = function () {
       /* Definierung von Long und Lat */
-      let args = window.location.search;
-      console.log(args);
-      let long = 14.2454676;
-      let lat = 51.4390602;
-      args.split('?');
+      
 
       var poi0 = { name: "Kulturfabrik", id: "kufa", coordinates: [14.245475, 51.438972], description: "Das Soziokulturelle Zentrum für Hoyerswerda und die Region. Braugasse 1, 02977 Hoyerswerda"};
       var poi1 = { name: "ZCOM", id: "hoyzcom", coordinates: [14.25608, 51.43744], description: "Das Zuse-Computer-Museum lehrt die Geschichte des ersten Computers und wer diesen Erfand. D.-Bonhoeffer-Str. 1-3, 02977 Hoyerswerda" };
@@ -88,7 +84,7 @@
           var point = ol.proj.fromLonLat(locObj.coordinates);
           var size = map.getSize();
           view1.setCenter(ol.proj.fromLonLat(locObj.coordinates))
-          view1.zoom(5)
+          view1.setZoom(17)
           console.log(locObj.id);
           descriptionDiv.innerHTML = locObj.description;
         }
@@ -155,8 +151,8 @@
 
       /* Für die Karte benötigtes Zeug */
       var properties = {
-        center: ol.proj.fromLonLat([long, lat]),
-        zoom: 18,
+        center: ol.proj.fromLonLat(poi0.coordinates),
+        zoom: 17,
         minZoom: 2,
         maxZoom: 19
       }
