--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           anchor: [0.5, 10],
           anchorXUnits: 'fraction',
           anchorYUnits: 'pixels',
-          src: 'icon.png'
+          src: 'test.png'
         })
       });
 
