--- a/index.html
+++ b/index.html
@@ -73,7 +73,8 @@
           anchor: [0.5, 640],
           anchorXUnits: 'fraction',
           anchorYUnits: 'pixels',
-          src: 'test.png'
+          src: 'test.png',
+          scale: 0.25
         })
       });
 
