--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       /* Definierung von Long und Lat */
       
 
-      var poi0 = { name: "Kulturfabrik", id: "kufa", coordinates: [14.245475, 51.438972], description: "Das Soziokulturelle Zentrum für Hoyerswerda und die Region. Braugasse 1, 02977 Hoyerswerda"};
+      var poi0 = { name: "Kulturfabrik", id: "hoykufa", coordinates: [14.245475, 51.438972], description: "Das Soziokulturelle Zentrum für Hoyerswerda und die Region. Braugasse 1, 02977 Hoyerswerda"};
       var poi1 = { name: "ZCOM", id: "hoyzcom", coordinates: [14.25608, 51.43744], description: "Das Zuse-Computer-Museum lehrt die Geschichte des ersten Computers und wer diesen Erfand. D.-Bonhoeffer-Str. 1-3, 02977 Hoyerswerda" };
       var poi2 = { name: "Johanneum", id: "hoyjohanneum", coordinates: [14.24694, 51.43609], description: "Das Johanneum ist eine Christliche Schule in Hoyerswerda mit Gymnasial und Oberschulklassen. Fischerstraße 5, 02977 Hoyerswerda" };
       var poi3 = { name: "Foucault", id: "hoyfoucault", coordinates: [14.25319, 51.43650], description:  "Das Léon-Foucault-Gymnasium fördert Schüler in z.B. dem mathematisch-naturwissenschaftlichen, oder dem künstlerischen Gebiet. Straße des Friedens 26, 02977 Hoyerswerda" };
