tags bei poi hinzugefügt

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
   <script type="text/javascript">
     window.onload = function () {
 
-      var poi0 = { name: "Kulturfabrik", id: "hoykufa", coordinates: [14.245475, 51.438972], description: "Das Soziokulturelle Zentrum für Hoyerswerda und die Region. Auch Kufa genannt. Braugasse 1, 02977 Hoyerswerda"};
-      var poi1 = { name: "ZCOM", id: "hoyzcom", coordinates: [14.25608, 51.43744], description: "Das Zuse-Computer-Museum lehrt die Geschichte des ersten Computers und wer diesen Erfand. D.-Bonhoeffer-Str. 1-3, 02977 Hoyerswerda" };
-      var poi2 = { name: "Johanneum", id: "hoyjohanneum", coordinates: [14.24694, 51.43609], description: "Das Johanneum ist eine Christliche Schule in Hoyerswerda mit Gymnasial und Oberschulklassen. Fischerstraße 5, 02977 Hoyerswerda" };
-      var poi3 = { name: "Foucault", id: "hoyfoucault", coordinates: [14.25319, 51.43650], description:  "Das Léon-Foucault-Gymnasium fördert Schüler in z.B. dem mathematisch-naturwissenschaftlichen, oder dem künstlerischen Gebiet. Straße des Friedens 26, 02977 Hoyerswerda" };
-      var poi4 = { name: "Lausitzer Platz", id: "hoylausplatz", coordinates: [14.26245, 51.43843], description:  "In diesem Einkaufscenter kann man in 66 Geschäften shoppen oder bummeln. Lausitzer Platz 1-3, 02977 Hoyerswerda" };
-      var poi5 = { name: "Waldfriedhof", id: "hoywaldfriedhof", coordinates: [14.2856, 51.44086], description:  "Der Waldfriedhof Hoyerswerda ist ein in der Nähe von Hoyerswerda liegender Friedhof. Am Waldfriedhof 2, 02977 Hoyerswerda" };
+      var poi0 = { name: "Kulturfabrik", id: "hoykufa", coordinates: [14.245475, 51.438972], description: "Das Soziokulturelle Zentrum für Hoyerswerda und die Region. Auch Kufa genannt. Braugasse 1, 02977 Hoyerswerda", tags: "kultur,"};
+      var poi1 = { name: "ZCOM", id: "hoyzcom", coordinates: [14.25608, 51.43744], description: "Das Zuse-Computer-Museum lehrt die Geschichte des ersten Computers und wer diesen Erfand. D.-Bonhoeffer-Str. 1-3, 02977 Hoyerswerda", tags: "computer, geschichte" };
+      var poi2 = { name: "Johanneum", id: "hoyjohanneum", coordinates: [14.24694, 51.43609], description: "Das Johanneum ist eine Christliche Schule in Hoyerswerda mit Gymnasial und Oberschulklassen. Fischerstraße 5, 02977 Hoyerswerda", tags: "schule, christlich, gymnasium" };
+      var poi3 = { name: "Foucault", id: "hoyfoucault", coordinates: [14.25319, 51.43650], description:  "Das Léon-Foucault-Gymnasium fördert Schüler in z.B. dem mathematisch-naturwissenschaftlichen, oder dem künstlerischen Gebiet. Straße des Friedens 26, 02977 Hoyerswerda", tags :"schule, gymnasium" };
+      var poi4 = { name: "Lausitzer Platz", id: "hoylausplatz", coordinates: [14.26245, 51.43843], description:  "In diesem Einkaufscenter kann man in 66 Geschäften shoppen oder bummeln. Lausitzer Platz 1-3, 02977 Hoyerswerda", tags: "shoppen, einkaufen" };
+      var poi5 = { name: "Waldfriedhof", id: "hoywaldfriedhof", coordinates: [14.2856, 51.44086], description:  "Der Waldfriedhof Hoyerswerda ist ein in der Nähe von Hoyerswerda liegender Friedhof. Am Waldfriedhof 2, 02977 Hoyerswerda", tags:"" };
       
       var locations = [poi0, poi1, poi2, poi3, poi4, poi5];
 
@@ -162,7 +162,7 @@
           var results = [];
           for (var locIndex in locations) {
               var locObj = locations[locIndex];
-              var name = locObj.name.toLowerCase(), description = locObj.description.toLowerCase();
+              var name = locObj.name.toLowerCase(), description = locObj.description.toLowerCase(), tags = locObj.tags.toLowerCase();
               
               if (name.indexOf(searchString) >= 0)
               {
