--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="bulma.css" type="text/css" />
     <link rel="stylesheet" href="own.css" type="text/css" />
     <link rel="shortcut icon" href="favicon.png" />
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
 
   <script src="https://cdn.rawgit.com/openlayers/openlayers.github.io/master/en/v5.3.0/build/ol.js"></script>
   <title>Potat0 Maps</title>
@@ -59,13 +60,14 @@
 
       function createClickListener(locObj) {
         return function() {
+          $( '.box1' ).fadeOut("fast")
           var point = ol.proj.fromLonLat(locObj.coordinates);
           var size = map.getSize();
           view1.setCenter(ol.proj.fromLonLat(locObj.coordinates))
           view1.setZoom(17)
           console.log(locObj.id);
           descriptionDiv.innerHTML = locObj.description;
-          document.getElementById(locObj.name).setAttribute('class', 'box-visible')
+          document.getElementById(locObj.name).style.display="block"
         }
       }
 
@@ -88,7 +90,7 @@
 
         var guielement = document.createElement('div');
         guielement.setAttribute('id', locObj.name);
-        guielement.setAttribute("class", "box-invisible")
+        guielement.setAttribute("class", "box1")
         guielement.innerHTML = locObj.name;
         guiDiv.appendChild(guielement);
 
