Added Lessing-Gymnasium as POI

--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
       var poi3 = { name: "Foucault", id: "hoyfoucault", coordinates: [14.25319, 51.43650], description:  "Das Léon-Foucault-Gymnasium fördert Schüler in z.B. dem mathematisch-naturwissenschaftlichen, oder dem künstlerischen Gebiet.", tags :"schule, gymnasium", address:"Straße des Friedens 26, 02977 Hoyerswerda" };
       var poi4 = { name: "Lausitzer Platz", id: "hoylausplatz", coordinates: [14.26245, 51.43843], description:  "In diesem Einkaufscenter kann man in 66 Geschäften shoppen oder bummeln.", tags: "shoppen, einkaufen", address:"Lausitzer Platz 1-3, 02977 Hoyerswerda" };
       var poi5 = { name: "Waldfriedhof", id: "hoywaldfriedhof", coordinates: [14.2856, 51.44086], description:  "Der Waldfriedhof Hoyerswerda ist ein in der Nähe von Hoyerswerda liegender Friedhof", tags:"", address:"Am Waldfriedhof 2, 02977 Hoyerswerda" };
+      var poi6 = { name: "Lessing", id: "hoylessing", coordinates: [14.233448, 51.437437], description:  "Das Lessing-Gymnasium ist ein musikalisch und wissenschaftlich orientiertes Gymnasium", tags:"schule, lessing", address:"Pestalozzistraße 1, 02977 Hoyerswerda" };
       
-      var locations = [poi0, poi1, poi2, poi3, poi4, poi5];
+      var locations = [poi0, poi1, poi2, poi3, poi4, poi5, poi6];
 
       var iconStyle = new ol.style.Style({
         image: new ol.style.Icon({
