--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         //Einlesen der JSON-File: https://ethercalc.org/80v6flbti30d.csv.json
 
         $.ajax({
-            url: 'https://ethercalc.org/80v6flbti30d.csv.json',
+            url: 'https://ethercalc.net/80v6flbti30d.csv.json',
             dataType: 'json',
             type: 'get',
             cache: 'false',
