--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         var arrpoi = [];
         var locations = [];
 
-        //Einlesen der JSON-File: https://ethercalc.org/80v6flbti30d.csv.json
+        //Einlesen der JSON-File: https://ethercalc.net/80v6flbti30d.csv.json
 
         $.ajax({
             url: 'https://ethercalc.net/80v6flbti30d.csv.json',
